app/assets/stylesheets/media_queries.css.scss
// In case the nav was hidden by click event in narrower width
@media (min-width: 1043.1em) {
  #malmo-masthead {
    > nav, #masthead-search {
      display: block !important;
    }
  }
}

// Switch to collapsed top nav
@media (max-width: 1043em) {
  #malmo-masthead {
    @include clearfix();
    position: fixed;
    top: 0;
    min-width: 0;
    width: emize(320);
    height: auto;
    min-height: 2.6em;
    margin: 0 0 1em;

    #nav-triggers {
      display: block;
      position: static;
      margin: .6em 1em 0 0;
      float: right;
      li {
        display: inline-block;
        margin: 0;
        padding: 0;
      }
      a {
        height: 2em;
        color: white;
        font-family: $sansSerif;
        font-size: emize(13, 16);
      }
    }

    #nav-menu-trigger {
      display: block;
      margin-right: -1px;
      a {
        margin-right: 1.4em;
        span {
          padding-left: .3em;
        }
      }
    }
    #nav-search-trigger a {
      margin-right: 0;
      span {
        padding-left: .3em;
      }
    }

    nav#masthead-main {
      position: static;
      display: none;
      clear: both;
      border-bottom: 0;
      height: auto;
      background: $narrowNavBackground;
      color: $narrowNavColor;
      ul {
        margin-left: 0;
      }
      ul li {
        display: block;
        float: none;
        width: 100%;
        background: $backgroundLight;
        a,
        a:hover,
        a:focus {
          display: block;
          width: 100%;
          height: auto;
          font-size: emize(15, 16);
          padding: emize(18) emize(13);
          color: $narrowNavColor;
          border-width: 1px 0 0;
          border-top-color: $narrowNavBorderColor;
        }
        a:hover,
        a:focus {
          background-color: $narrowNavBackgroundHiglight;
        }
      }
      li:first-child a {
        border-left: 0;
      }
    }
    #masthead-others {
      display: none;
    }

    #masthead-search {
      display: none;
      position: static;
      clear: both;
      @include box-sizing(border-box);
      width: 100%;
      overflow: hidden;
      margin-top: emize(42);
      padding: 1.4em .8em;
      border-bottom: $border;
      background: $backgroundLight;
      form {
        margin-bottom: 0;
      }
      input[type=text] {
        width: 75%;
      }
    }
  }

  .ui-autocomplete .ui-menu-item {
    border-bottom: $border;
    &:last-child {
      border-bottom: none;
    }
    > a.ui-corner-all {
      padding: .8em;
    }
  }

  body.development:after,
  body.test:after {
    font-size: 13px;
  }
}


@media (max-width: 1046em) {
  @include form-force-vertical();
}

@media (max-width: 1034em) {
  body.development:after,
  body.test:after {
    font-size: 9px;
  }
}

